@@ -888,6 +888,22 @@ class DecoderTestCase(ClassCacheClearingTestCase):
         self.assertEquals(foo.family_name, 'Doe')
         self.assertEquals(foo.given_name, 'Jane')
 
+    def test_ioerror_buffer_position(self):
+        """
+        Test to ensure that if an IOError is raised by `readElement` that
+        the original position of the stream is restored.
+        """
+        bytes = pyamf.encode(u'foo', [1, 2, 3], encoding=pyamf.AMF0).getvalue()
+
+        self.buf.write(bytes[:-1])
+        self.buf.seek(0)
+
+        self.decoder.readElement()
+        self.assertEquals(self.buf.tell(), 6)
+
+        self.assertRaises(IOError, self.decoder.readElement)
+        self.assertEquals(self.buf.tell(), 6)
+
 
 class HelperTestCase(unittest.TestCase):
     def test_encode(self):
